Fix spacing issues in code

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,7 @@ h4 {
 .general-sub {
     font-family: "Exo", sans-serif;
     font-weight: 300;
-    color :  # fafafa ;
+    color :  #fafafa ;
 }
 
 .inline-block {
@@ -121,7 +121,7 @@ header {
     font-size: 0;
 }
 
-# nav  li {
+#nav  li {
     font-size: 14px;
     padding: 0;
 }
@@ -146,7 +146,7 @@ header {
 .menuitem a i {
     padding-top: 22px;
     display: block;
-    color :  # fafafa ;
+    color :  #fafafa;
     font-size: 26px;
 }
 
@@ -172,14 +172,14 @@ header {
 
 footer {
     background-color: #525252;
-    color :  # fafafa ;
+    color :#fafafa;
     min-height: 120px;
     margin: 0;
 }
 
 .cv-pdf i {
     font-size: 18px;
-    color :  # fafafa ;
+    color :  #fafafa ;
     text-align: center;
     padding-left: 5px;
     transition: all 0.35s ease-in-out;
@@ -196,7 +196,7 @@ footer {
     padding-bottom: 15px;
 }
 
-. social links  li  a  i {
+.social-links  li  a  i {
     width: 32px;
     height: 32px;
     padding: 12px 0;
@@ -204,7 +204,7 @@ footer {
     font-size: 13px;
     line-height: 7px;
     text-align: center;
-    color :  # fafafa ;
+    color :  #fafafa;
     background: #8f8f8f;
     transition: all 0.35s ease-in-out;
     -moz-transition: all 0.35s ease-in-out;
@@ -279,7 +279,7 @@ footer {
     left: 0px;
     font-weight: 400;
     padding: 3px 30px 2px 10px;
-    color :  # fafafa ;
+    color :  #fafafa;
     background-color: rgba(25, 25, 25, 0.2);
 }
 
@@ -290,14 +290,14 @@ footer {
 /* ----------------------------------------Work History */
 
 .history-heading {
-    color :  # fafafa ;
+    color :  #fafafa;
     margin-bottom: 50px;
 }
 
 .timeline-item {
     padding: 4em 2em 0em 2em;
     position: relative;
-    color :  # fafafa ;
+    color :  #fafafa ;
     border-left: 1px solid;
 }
 
